fix and new additions